change user status colors and icons, fix memership notification not showing

--- a/app/main.css
+++ b/app/main.css
@@ -204,23 +204,23 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 38px;
-  height: 38px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   background-color: white;
 }
 
 .member-icon-container.active {
-  background-color: #66b0a9;
+  background-color: #fec342;
 }
 .member-icon-container.expire-soon {
-  background-color: #e8a141;
+  background-color: #f39e1f;
 }
 .member-icon-container.pre-purchased {
-  background-color: #486dae;
+  background-color: #426db5;
 }
 .member-icon-container.expired {
-  background-color: #dc765a;
+  background-color: #ea6f50;
 }
 
 .member-id {
@@ -230,7 +230,7 @@ li {
 #members-list .member .member-info-button {
   cursor: pointer;
   margin-left: auto;
-  padding: 10px 18px;
+  padding: 13px 18px;
   font-size: 11px;
   font-weight: bold;
   color: white;
